<resources>
    <string name="app_name">拒食強身</string>
    <string name="facebook_app_id">832631157219595</string>
    <string name="fb_login_protocol_scheme">fb832631157219595</string>
    <string name="title_home">主頁</string>
    <string name="title_dashboard">紀錄</string>
    <string name="title_recipe">食譜</string>
    <string name="title_social">貼文</string>
    <string name="title_profile">個人檔案</string>

    <string name="tab_text_1">斷食計畫</string>
    <string name="tab_text_2">吃飯紀錄</string>
    <string name="social_tab_text_1">po文</string>
    <string name="social_tab_text_2">文章</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="next">下一步</string>
    <string name="close">了解</string>
    <string name="mainActivity_slogan">別一減肥就怕會失敗 \n 許多奇蹟我們相信才會存在。</string>
    <string name="tv_SignIn">登入</string>
    <string name="Fb_SignIn">FB登入</string>
    <string name="tv_facebook">Facebook</string>
    <string name="tv_google">Google</string>
    <string name="Google_SignIn">Google登入</string>
    <string name="tv_Email">以用戶ID和密碼登入</string>
    <string name="shut_down">X</string>
    <string name="UserFace">IV_User</string>
    <string name="EmailRegister">註冊</string>
    <string name="EmailLogin">登入</string>
    <string name="forgetPass">忘記密碼?</string>
    <string name="NotHaveAccount">沒有帳號？註冊</string>
    <string name="UserName">請輸入名稱</string>
    <string name="Email">請輸入電子信箱</string>
    <string name="Password">請輸入密碼</string>
    <string name="repassword">密碼再次確認</string>
    <string name="already_have_account_login">已經有帳戶? 登錄</string>
    <string name="tv_foodRecord">食物紀錄</string>
    <string name="date">日期</string>
    <string name="Grains_Cereal">全穀雜糧類(碗):</string>
    <string name="MeatandDairy">豆魚蛋肉類(份):</string>
    <string name="Milk">乳品類(杯):</string>
    <string name="Vegetables">蔬菜類(份):</string>
    <string name="Fruits">水果類(份):</string>
    <string name="OilsAndFats">油脂與堅果種子類(份):</string>
    <string name="FastingTeaching">斷食首頁教學</string>
    <string name="Iknow">我知道了~</string>
    <string name="Choose_fasting">選擇斷食計畫</string>
    <string name="tv_choose">每日限時進食</string>
    <string name="fasting1410">14/10斷食法</string>
    <string name="fasting1410explain">每週挑五天在10小時內進食</string>
    <string name="difficulty1">(難度) ★</string>
    <string name="difficulty2">(難度) ★★</string>
    <string name="difficulty3">(難度) ★★★</string>
    <string name="difficulty4">(難度) ★★★★</string>
    <string name="fasting168">16/8斷食法</string>
    <string name="fasting186_5day">18/6斷食法(五天)</string>
    <string name="fasting186_7day">18/6斷食法(七天)</string>
    <string name="fasting168explain">每週挑五天在8小時內進食</string>
    <string name="fasting186_5dayExplain">每週挑五天在6小時內進食</string>
    <string name="fasting186_7dayExplain">每週挑七天在6小時內進食</string>
    <string name="fasting_End">確定要提前結束此次斷食嗎</string>
    <string name="SureToEnd">此次斷食的進度將全部遺失</string>
    <string name="iv_time">太陽月亮</string>
    <string name="changeFasting">更改斷食計畫</string>
    <string name="foodWhat">今天吃了甚麼?</string>
    <string name="RecordFasting">記錄此次斷食</string>
    <string name="completed">已完成</string>
    <string name="undone">未完成</string>
    <string name="processing">進行中</string>
    <string name="fastingProgress">斷食進度</string>
    <string name="water">今日喝多少水</string>
    <string name="unit">0</string>
    <string name="cc">0cc</string>
    <string name="earlyTermination">提前結束</string>
    <string name="NumberOfMeals">第 N 餐</string>
    <string name="todayNoFood">今日未新增任何用餐紀錄</string>
    <string name="team">團隊</string>
    <string name="team109503">109503 專題</string>
    <string name="TAO">了解組員；對組員實行有效管理；實現員工之間的良好溝通；用激勵來帶動組員們的工作積極性；實現班組內部的和諧發展，提高組員素質；對組員進行心理咨詢等。</string>
    <string name="GUO">主動積極。就是無論什麼時候，做事情一定要主動想辦法、主動參與策劃、主動提供建議，為方案和產品積極貢獻自己的一份微力。</string>
    <string name="Chen">快速行動。有好的想法，也有快速執行領導意志的行動力，總覺得只說不做，僅是紙上談兵，光講是沒有用處的，一定要落到實處才能見到效果的觀點。</string>
    <string name="SHEN">任何一件事，只要是自己份內的工作，都會投入全部精力做好該做的事，承擔起該承擔的責任，所謂專注精神正是此人最大特質</string>
    <string name="YU">是一位給予者，本性善良，助人為快樂之本，組員的需要努力付出自己所有，在組員快站不穩時就已經默默的扶持對方了，這該怎麼跌倒呢?</string>
    <string name="username">UserName</string>
    <string name="invite">邀請朋友</string>
    <string name="personal_information">個人資料</string>
    <string name="about">關於</string>
    <string name="Sign_out">登出</string>
    <string name="Manager">管理者選項</string>
    <string name="Amount_of_exercise">運動量</string>
    <string name="complete">完成</string>
    <string name="img">圖示</string>
    <string name="gender">性別</string>
    <string name="age">年齡</string>
    <string name="hight">身高</string>
    <string name="fat">體脂率</string>
    <string name="Activity">活動量</string>


</resources>
