<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.About"
    android:background="@drawable/background_black">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/iv_team"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/team"
        android:layout_margin="10dp"
        android:contentDescription="@string/team" />

    <TextView
        android:id="@+id/tv_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team109503"
        android:layout_below="@+id/iv_team"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="italic"
        android:layout_margin="10dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_team1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/team1"
        android:layout_below="@+id/tv_team"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/tv_team1"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/tv_team"
        android:layout_toEndOf="@+id/iv_team1"
        android:textColor="#fff"
        android:text="@string/TAO"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_team2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/team2"
        android:layout_below="@+id/tv_team1"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/tv_team2"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/tv_team1"
        android:layout_toStartOf="@+id/iv_team2"
        android:textColor="#fff"
        android:textSize="17sp"
        android:text="@string/GUO"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_team3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/team3"
        android:layout_below="@+id/tv_team2"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/tv_team3"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/tv_team2"
        android:layout_toEndOf="@+id/iv_team3"
        android:textColor="#fff"
        android:text="@string/Chen"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_team4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/team4"
        android:layout_below="@+id/tv_team3"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/tv_team4"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/tv_team3"
        android:layout_toStartOf="@+id/iv_team4"
        android:textColor="#fff"
        android:textSize="17sp"
        android:text="@string/SHEN" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_team5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/team5"
        android:layout_below="@+id/tv_team4"
        android:layout_margin="10dp" />

    <TextView
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/tv_team4"
        android:layout_toEndOf="@+id/iv_team5"
        android:textColor="#fff"
        android:text="@string/YU"/>


</RelativeLayout>
</ScrollView>