<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailLogin"
    android:padding="20dp">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/com_facebook_profile_picture_blank_square"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/UserFace" />

    <Button
        android:id="@+id/register_btn"
        android:text="@string/EmailRegister"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/register"
        android:minWidth="230dp"/>

    <Button
        android:id="@+id/login_btn"
        android:text="@string/EmailLogin"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/login"/>

</RelativeLayout>