<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night_bg"
    tools:context=".MainActivity"
    android:id="@+id/rl_bg">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90000000">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/gothambold"
        android:text="@string/mainActivity_slogan"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#ffffff"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:src="@drawable/logo"
        android:layout_below="@+id/title"
        android:layout_centerInParent="true"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">
        <!--画左边的那条线-->
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/tv_SignIn"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <!--画右边的那条线-->
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <ImageView
        android:id="@+id/facebookIma"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/popwindow_zhongjie"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/com_facebook_favicon_blue"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/Fb_SignIn" />


    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
      android:layout_marginEnd="89dp"
        android:layout_marginBottom="78dp"
        android:text="@string/tv_facebook"
        android:textColor="#ffffff"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="79dp"
        android:text="@string/tv_google"
        android:textColor="#ffffff"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/googleIma"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/popwindow_zhongjie"
        android:contentDescription="@string/Google_SignIn"
        android:padding="20dp"
        app:srcCompat="@drawable/googleg_standard_color_18"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="509dp" />

    <TextView
        android:id="@+id/button2"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bg_button_white"
        android:text="@string/tv_Email"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/facebookIma"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/googleIma"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="633dp" />
</RelativeLayout>
    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_gravity="end"
            android:text="@string/shut_down"
            android:textStyle="bold"
            android:textSize="25sp"/>
    </com.youth.banner.Banner>
</RelativeLayout>